aggiunta condizione ai link header che cambiano colore se corrispondono all'indirizzo attuale

--- a/public/style.css
+++ b/public/style.css
@@ -39,3 +39,8 @@ nav{
     display: flex;
     justify-content: center;
 }
+/* classe per i link header */
+.selected{
+    color:yellow;
+    text-decoration: dashed;
+}
